# video

./: .gitignore  1642212017465.ts  CMakeLists.txt  index.m3u8  main.cpp  video
include/: ApiUtils.h  CFileUtils.cpp  CFileUtils.h  CFps.h  CLogUtils.h  CM3u8Utils.h  CStringUtils.h  CSystemUtils.h  CTimeUtils.h  FFmpegUtil.h  OpenCvUtils.h  define.h
include/restclient-cpp/: connection.h  restclient.h
shell/: install.sh  rsync.sh
source/: FFmpegUtil.cpp  OpenCvUtils.cpp
source/RestClient/: connection.cc  restclient.cc
source/Tools/: ffmpegTest.cpp  testFileUtils.cpp  testUsbCam.cpp
source/Utils/: ApiUtils.cpp  LogUtils.cpp  TimeUtils.cpp
